syntax = "proto3";

package  employee_task;

option go_package = "github.com/dinhtp/lets-go-pbtype/employee_task";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message Employee_Task{
    string id = 1;
    string employee_id = 2;
    string task_id = 3;

    string created_at = 20;
    string updated_at = 21;
}



service EmployeeTaskService {
    rpc Create(Employee_Task) returns (Employee_Task) {
        option (google.api.http) = {
            post: "/go/task-assign"
            body: "*"
        };
    };

    rpc Delete(Employee_Task) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/go/task-assign"
        };
    };
}